change to go example

--- a/charts/demo/0.1.0/values.yaml
+++ b/charts/demo/0.1.0/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: lawr/example-greenhouse
-  tag: 5
+  repository: lawr/example-helloserver
+  tag: latest
   pullPolicy: IfNotPresent
 
 nameOverride: ""
